jets/compilerv2/compiler/.antlr/JetRuleParser.java
// Generated from /home/michel/projects/repos/jetstore_agentic_ai/jetstore_ai/jets/compilerv2/compiler/JetRule.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JetRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, JetCompilerDirective=13, CLASS=14, BaseClasses=15, 
		AsTable=16, DataProperties=17, ObjectProperties=18, ARRAY=19, GroupingProperties=20, 
		MAIN=21, JETSCONFIG=22, MaxLooping=23, MaxRuleExec=24, InputType=25, RULESEQ=26, 
		MainRuleSets=27, TRIPLE=28, Int32Type=29, UInt32Type=30, Int64Type=31, 
		UInt64Type=32, DoubleType=33, StringType=34, DateType=35, DatetimeType=36, 
		BoolType=37, ResourceType=38, VolatileResourceType=39, CreateUUIDResource=40, 
		LookupTable=41, TableName=42, CSVFileName=43, Key=44, Columns=45, TRUE=46, 
		FALSE=47, NULL=48, NOT=49, TOTEXT=50, EQ=51, LT=52, LE=53, GT=54, GE=55, 
		NE=56, REGEX2=57, PLUS=58, MINUS=59, MUL=60, DIV=61, OR=62, AND=63, SEMICOLON=64, 
		ASSIGN=65, Identifier=66, DIGITS=67, STRING=68, COMMENT=69, WS=70;
	public static final int
		RULE_jetrule = 0, RULE_statement = 1, RULE_jetCompilerDirectiveStmt = 2, 
		RULE_defineJetStoreConfigStmt = 3, RULE_jetstoreConfig = 4, RULE_jetstoreConfigSeq = 5, 
		RULE_jetstoreConfigItem = 6, RULE_defineClassStmt = 7, RULE_classStmt = 8, 
		RULE_subClassOfStmt = 9, RULE_dataPropertyDefinitions = 10, RULE_objectPropertyDefinitions = 11, 
		RULE_dataPropertyType = 12, RULE_groupingPropertyStmt = 13, RULE_asTableStmt = 14, 
		RULE_asTableFlag = 15, RULE_defineRuleSeqStmt = 16, RULE_ruleSetSeq = 17, 
		RULE_ruleSetDefinitions = 18, RULE_defineLiteralStmt = 19, RULE_int32LiteralStmt = 20, 
		RULE_uInt32LiteralStmt = 21, RULE_int64LiteralStmt = 22, RULE_uInt64LiteralStmt = 23, 
		RULE_doubleLiteralStmt = 24, RULE_stringLiteralStmt = 25, RULE_dateLiteralStmt = 26, 
		RULE_datetimeLiteralStmt = 27, RULE_booleanLiteralStmt = 28, RULE_intExpr = 29, 
		RULE_uintExpr = 30, RULE_doubleExpr = 31, RULE_declIdentifier = 32, RULE_defineResourceStmt = 33, 
		RULE_namedResourceStmt = 34, RULE_volatileResourceStmt = 35, RULE_resourceValue = 36, 
		RULE_lookupTableStmt = 37, RULE_csvLocation = 38, RULE_stringList = 39, 
		RULE_stringSeq = 40, RULE_columnDefSeq = 41, RULE_columnDefinitions = 42, 
		RULE_jetRuleStmt = 43, RULE_ruleProperties = 44, RULE_propertyValue = 45, 
		RULE_antecedent = 46, RULE_consequent = 47, RULE_atom = 48, RULE_objectAtom = 49, 
		RULE_keywords = 50, RULE_exprTerm = 51, RULE_binaryOp = 52, RULE_unaryOp = 53, 
		RULE_tripleStmt = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"jetrule", "statement", "jetCompilerDirectiveStmt", "defineJetStoreConfigStmt", 
			"jetstoreConfig", "jetstoreConfigSeq", "jetstoreConfigItem", "defineClassStmt", 
			"classStmt", "subClassOfStmt", "dataPropertyDefinitions", "objectPropertyDefinitions", 
			"dataPropertyType", "groupingPropertyStmt", "asTableStmt", "asTableFlag", 
			"defineRuleSeqStmt", "ruleSetSeq", "ruleSetDefinitions", "defineLiteralStmt", 
			"int32LiteralStmt", "uInt32LiteralStmt", "int64LiteralStmt", "uInt64LiteralStmt", 
			"doubleLiteralStmt", "stringLiteralStmt", "dateLiteralStmt", "datetimeLiteralStmt", 
			"booleanLiteralStmt", "intExpr", "uintExpr", "doubleExpr", "declIdentifier", 
			"defineResourceStmt", "namedResourceStmt", "volatileResourceStmt", "resourceValue", 
			"lookupTableStmt", "csvLocation", "stringList", "stringSeq", "columnDefSeq", 
			"columnDefinitions", "jetRuleStmt", "ruleProperties", "propertyValue", 
			"antecedent", "consequent", "atom", "objectAtom", "keywords", "exprTerm", 
			"binaryOp", "unaryOp", "tripleStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "'['", "']'", "'as'", "'.'", "':'", "'->'", 
			"'('", "')'", "'?'", "'@JetCompilerDirective'", "'class'", "'$base_classes'", 
			"'$as_table'", "'$data_properties'", "'$object_properties'", "'array of'", 
			"'$grouping_properties'", "'main'", "'jetstore_config'", "'$max_looping'", 
			"'$max_rule_exec'", "'$input_types'", "'rule_sequence'", "'$main_rule_sets'", 
			"'triple'", "'int'", "'uint'", "'long'", "'ulong'", "'double'", "'text'", 
			"'date'", "'datetime'", "'bool'", "'resource'", "'volatile_resource'", 
			"'create_uuid_resource()'", "'lookup_table'", "'$table_name'", "'$csv_file'", 
			"'$key'", "'$columns'", "'true'", "'false'", "'null'", "'not'", "'toText'", 
			"'=='", "'<'", "'<='", "'>'", "'>='", "'!='", "'r?'", "'+'", "'-'", "'*'", 
			"'/'", "'or'", "'and'", "';'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "JetCompilerDirective", "CLASS", "BaseClasses", "AsTable", "DataProperties", 
			"ObjectProperties", "ARRAY", "GroupingProperties", "MAIN", "JETSCONFIG", 
			"MaxLooping", "MaxRuleExec", "InputType", "RULESEQ", "MainRuleSets", 
			"TRIPLE", "Int32Type", "UInt32Type", "Int64Type", "UInt64Type", "DoubleType", 
			"StringType", "DateType", "DatetimeType", "BoolType", "ResourceType", 
			"VolatileResourceType", "CreateUUIDResource", "LookupTable", "TableName", 
			"CSVFileName", "Key", "Columns", "TRUE", "FALSE", "NULL", "NOT", "TOTEXT", 
			"EQ", "LT", "LE", "GT", "GE", "NE", "REGEX2", "PLUS", "MINUS", "MUL", 
			"DIV", "OR", "AND", "SEMICOLON", "ASSIGN", "Identifier", "DIGITS", "STRING", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JetRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JetRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetruleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JetRuleParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public JetruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterJetrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitJetrule(this);
		}
	}

	public final JetruleContext jetrule() throws RecognitionException {
		JetruleContext _localctx = new JetruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jetrule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3298339872784L) != 0) || _la==COMMENT) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public JetCompilerDirectiveStmtContext jetCompilerDirectiveStmt() {
			return getRuleContext(JetCompilerDirectiveStmtContext.class,0);
		}
		public DefineJetStoreConfigStmtContext defineJetStoreConfigStmt() {
			return getRuleContext(DefineJetStoreConfigStmtContext.class,0);
		}
		public DefineLiteralStmtContext defineLiteralStmt() {
			return getRuleContext(DefineLiteralStmtContext.class,0);
		}
		public DefineClassStmtContext defineClassStmt() {
			return getRuleContext(DefineClassStmtContext.class,0);
		}
		public DefineRuleSeqStmtContext defineRuleSeqStmt() {
			return getRuleContext(DefineRuleSeqStmtContext.class,0);
		}
		public DefineResourceStmtContext defineResourceStmt() {
			return getRuleContext(DefineResourceStmtContext.class,0);
		}
		public LookupTableStmtContext lookupTableStmt() {
			return getRuleContext(LookupTableStmtContext.class,0);
		}
		public JetRuleStmtContext jetRuleStmt() {
			return getRuleContext(JetRuleStmtContext.class,0);
		}
		public TripleStmtContext tripleStmt() {
			return getRuleContext(TripleStmtContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(JetRuleParser.COMMENT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JetCompilerDirective:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				jetCompilerDirectiveStmt();
				}
				break;
			case MAIN:
			case JETSCONFIG:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				defineJetStoreConfigStmt();
				}
				break;
			case Int32Type:
			case UInt32Type:
			case Int64Type:
			case UInt64Type:
			case DoubleType:
			case StringType:
			case DateType:
			case DatetimeType:
			case BoolType:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				defineLiteralStmt();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				defineClassStmt();
				}
				break;
			case RULESEQ:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				defineRuleSeqStmt();
				}
				break;
			case ResourceType:
			case VolatileResourceType:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				defineResourceStmt();
				}
				break;
			case LookupTable:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				lookupTableStmt();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				jetRuleStmt();
				}
				break;
			case TRIPLE:
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				tripleStmt();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 10);
				{
				setState(127);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetCompilerDirectiveStmtContext extends ParserRuleContext {
		public DeclIdentifierContext varName;
		public Token declValue;
		public TerminalNode JetCompilerDirective() { return getToken(JetRuleParser.JetCompilerDirective, 0); }
		public TerminalNode ASSIGN() { return getToken(JetRuleParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JetRuleParser.SEMICOLON, 0); }
		public DeclIdentifierContext declIdentifier() {
			return getRuleContext(DeclIdentifierContext.class,0);
		}
		public TerminalNode STRING() { return getToken(JetRuleParser.STRING, 0); }
		public JetCompilerDirectiveStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetCompilerDirectiveStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterJetCompilerDirectiveStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitJetCompilerDirectiveStmt(this);
		}
	}

	public final JetCompilerDirectiveStmtContext jetCompilerDirectiveStmt() throws RecognitionException {
		JetCompilerDirectiveStmtContext _localctx = new JetCompilerDirectiveStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jetCompilerDirectiveStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(JetCompilerDirective);
			setState(131);
			((JetCompilerDirectiveStmtContext)_localctx).varName = declIdentifier();
			setState(132);
			match(ASSIGN);
			setState(133);
			((JetCompilerDirectiveStmtContext)_localctx).declValue = match(STRING);
			setState(134);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineJetStoreConfigStmtContext extends ParserRuleContext {
		public JetstoreConfigContext jetstoreConfig() {
			return getRuleContext(JetstoreConfigContext.class,0);
		}
		public JetstoreConfigSeqContext jetstoreConfigSeq() {
			return getRuleContext(JetstoreConfigSeqContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JetRuleParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMENT() { return getTokens(JetRuleParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(JetRuleParser.COMMENT, i);
		}
		public DefineJetStoreConfigStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineJetStoreConfigStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterDefineJetStoreConfigStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitDefineJetStoreConfigStmt(this);
		}
	}

	public final DefineJetStoreConfigStmtContext defineJetStoreConfigStmt() throws RecognitionException {
		DefineJetStoreConfigStmtContext _localctx = new DefineJetStoreConfigStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineJetStoreConfigStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			jetstoreConfig();
			setState(137);
			match(T__0);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(138);
				match(COMMENT);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			jetstoreConfigSeq();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(145);
				match(COMMENT);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			match(T__1);
			setState(152);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetstoreConfigContext extends ParserRuleContext {
		public TerminalNode JETSCONFIG() { return getToken(JetRuleParser.JETSCONFIG, 0); }
		public TerminalNode MAIN() { return getToken(JetRuleParser.MAIN, 0); }
		public JetstoreConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetstoreConfig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterJetstoreConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitJetstoreConfig(this);
		}
	}

	public final JetstoreConfigContext jetstoreConfig() throws RecognitionException {
		JetstoreConfigContext _localctx = new JetstoreConfigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jetstoreConfig);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==MAIN || _la==JETSCONFIG) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JetstoreConfigSeqContext extends ParserRuleContext {
		public List<JetstoreConfigItemContext> jetstoreConfigItem() {
			return getRuleContexts(JetstoreConfigItemContext.class);
		}
		public JetstoreConfigItemContext jetstoreConfigItem(int i) {
			return getRuleContext(JetstoreConfigItemContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(JetRuleParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(JetRuleParser.COMMENT, i);
		}
		public JetstoreConfigSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jetstoreConfigSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).enterJetstoreConfigSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JetRuleListener ) ((JetRuleListener)listener).exitJetstoreConfigSeq(this);
		}
	}
